examples/bad/13-04-functions-redeclaration-nested.dog
int fun() {
    int fun(int y) {
        return 5;
    }

    void fun() {
        return;
    }
}